--- a/NOVA/Views/Shared/_Layout_menu2.cshtml
+++ b/NOVA/Views/Shared/_Layout_menu2.cshtml
@@ -87,14 +87,9 @@
                         <div data-i18n="Without menu">Satıcı Siparişi Raporu</div>
                     </a>
                 </li>
-                <li class="menu-item" id="malkabulform" style="display: @ViewBag.DisplayMalKabulForm">
-                    <a href="@Url.Action("MalKabulFormu", "Sevkiyat")" class="menu-link">
-                        <div data-i18n="Without menu">Mal Kabul Formu</div>
-                    </a>
-                </li>
-                <li class="menu-item" id="malkabulform" style="display: @ViewBag.DisplaySevkMalKabul">
+                <li class="menu-item" id="sevkmalkabul" style="display: @ViewBag.DisplaySevkMalKabul">
                     <a href="@Url.Action("SevkMalKabul", "Sevkiyat")" class="menu-link">
-                        <div data-i18n="Without menu">Sevk Mal Kabul Kayıt</div>
+                        <div data-i18n="Without menu">Sevk & Kabul İşlemleri</div>
                     </a>
                 </li>
             </ul>
