--- a/NOVA/Views/Shared/_Layout_anasayfa.cshtml
+++ b/NOVA/Views/Shared/_Layout_anasayfa.cshtml
@@ -26,7 +26,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Public+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap"
           rel="stylesheet" type="text/css" />
 
- 
+
 
 
     @Styles.Render("~/Content/test")
@@ -51,8 +51,6 @@
                 color: #fff;
                 text-decoration: none;
             }
-
-        
     </style>
 </head>
 <body>
@@ -238,7 +236,12 @@
                 <!-- / Content -->
                 <!-- Footer -->
                 <!-- / Footer -->
-
+                <footer class="content-footer footer bg-footer-theme my-1" style="background-color:transparent !important">
+                    <div style="width:100%;display: flex;justify-content: center;align-items: center;height: 50px;">
+                        2023 © designed by<img src="/assets/img/icons/brands/Nova.png" style="width: auto;height: inherit;margin-left: -8px;margin-right: -9px;transform: scale(0.6);">
+                        <a href="#" target="_blank" class="footer-link fw-bolder" style="width: min-content;">  NOVA</a>
+                    </div>
+                </footer>
                 <div class="content-backdrop fade"></div>
             </div>
             <!-- Content wrapper -->
@@ -255,7 +258,7 @@
 
     @Scripts.Render("~/bundles/bootstrap")
 
-  
+
 
 
 
