--- a/NOVA/Views/Shared/_Layout_menu.cshtml
+++ b/NOVA/Views/Shared/_Layout_menu.cshtml
@@ -411,8 +411,7 @@
                                 <div class="nav__dropdown-content">
                                     <a href="@Url.Action("SiparisRaporu", "Sevkiyat")" id="mussiparisrap1" style="cursor:pointer;display: @ViewBag.DisplaySiparisRaporu" class="nav__dropdown-item">• Müşteri Siparişi Raporu</a>
                                     <a href="@Url.Action("SaticiSiparisRaporu", "Sevkiyat")" id="saticisiprap1" style="cursor: pointer; display: @ViewBag.DisplaySaticiSiparisRaporu" class="nav__dropdown-item">• Satıcı Siparişi Raporu</a>
-                                    <a href="@Url.Action("MalKabulFormu", "Sevkiyat")" id="malkabulform" style="cursor: pointer; display: @ViewBag.DisplayMalKabulForm" class="nav__dropdown-item">• Mal Kabul Formu</a>
-                                    <a href="@Url.Action("SevkMalKabul", "Sevkiyat")" id="malkabulform" style="cursor: pointer; display: @ViewBag.DisplaySevkMalKabul" class="nav__dropdown-item">• Sevk Mal Kabul Kayıt</a>
+                                    <a href="@Url.Action("SevkMalKabul", "Sevkiyat")" id="sevkmalkabul1" style="cursor: pointer; display: @ViewBag.DisplaySevkMalKabul" class="nav__dropdown-item">• Sevk & Kabul İşlemleri</a>
                                 </div>
                             </div>
                         </div>
