--- a/NOVA/Views/Satis/DetayliSiparis.cshtml
+++ b/NOVA/Views/Satis/DetayliSiparis.cshtml
@@ -280,6 +280,8 @@
                             <th data-field="DOV_TIP" data-sortable="true" data-halign="center" data-align="center">Hesap Türü</th>
                             <th data-field="TESLIM_YERI" data-sortable="true" data-halign="center" data-align="center">Teslim Yeri</th>
                             <th data-field="PLASIYER_ADI" data-sortable="true" data-halign="center" data-align="center">Plasiyer Adı</th>
+                            <th data-field="ODEMEGUNU" data-sortable="true" data-halign="center" data-align="center" data-formatter="odemegunuFormatter">Vade</th>
+                            <th data-field="OZEL_KOD1" data-sortable="true" data-halign="center" data-align="center">Ödeme Şekli</th>
                             <th data-field="ACIKLAMA" data-visible="false" data-sortable="true" data-halign="center">Açıklama</th>
                             <th data-field="GENELTOPLAM" data-sortable="true" data-halign="center" data-align="right" data-formatter="toplamFormatter" data-footer-formatter="footerFormatter">Genel Toplam</th>
                         </tr>
@@ -401,6 +403,13 @@
     }
     function sipnoFormatter(value, index, row) {
         return value.substring(0, 1) + value.substring(3, 5) + "-" + value.substring(value.length - 5, value.length);
+    }
+    function odemegunuFormatter(value,iindex,row) {
+        if (value == 0) {
+            return "PEŞİN";
+        } else {
+            return "<span class='text-nowrap'>"+value +" GÜN</span>";
+        }
     }
     function tarihFormatter(value, index, row) {
         return new Date(value).toLocaleDateString();
